--- a/style.css
+++ b/style.css
@@ -19,19 +19,25 @@ body{
 .navbar{
     display: flex;
     list-style: none;
-    flex-direction: column;
-    width: fit-content;
-    /* border: 5px solid black; */
-    position: fixed;
-    left: 20px;
-    top: 20px;
-    gap: 10px;
+    margin-top: 50px;
+    justify-content: space-between;
+}
+
+.nav-buttons{
+    display: flex;
+}
+
+.nav-buttons:nth-child(1){
+    margin-left: 10%;
+}
+.nav-buttons:nth-child(2){
+    margin-right: 10%;
 }
 
 .nav-icon{
     width: 100px;
     height: auto;
-    padding: 20px 5px;
+    padding: 20px 75px;
 }
 
 
